--- a/investment.html
+++ b/investment.html
@@ -478,5 +478,6 @@
     <script>
         TalkerSDK.initializeTalkerSDK({ code: "biz008", position: "right" });
     </script>
+<a href="https://jaiwshim-project.github.io/21-Tunnel-Business-Plan/" target="_blank" class="floating-btn-left">&#128206; 소시얼허브 터널</a>
 </body>
 </html>
