--- a/investment.html
+++ b/investment.html
@@ -474,10 +474,8 @@
     </footer>
 
     <script src="script.js"></script>
-    <script src="https://chatbot-sdk.aitalker.co.kr/talker-sdk.umd.js"></script>
-    <script>
-        TalkerSDK.initializeTalkerSDK({ code: "biz008", position: "right" });
-    </script>
+
 <a href="https://jaiwshim-project.github.io/21-Tunnel-Business-Plan/" target="_blank" class="floating-btn-left">&#128206; 소시얼허브 터널</a>
-</body>
+<div class="aitalk-overlay" id="aitalkOverlay"><iframe src="https://aitalker.co.kr/biz008"></iframe></div>
+<button class="floating-btn-right" onclick="document.getElementById('aitalkOverlay').classList.toggle('active')">&#129302; AI톡</button></body>
 </html>
