--- a/strategy.html
+++ b/strategy.html
@@ -96,7 +96,7 @@
                     <p>지속 가능한 가치 축적을 위한 전략 컨설팅 설계</p>
                 </div>
                 <div class="franchise-doc-preview">
-                    <iframe src="바이젠_전략_컨설팅_기획서_compressed.pdf#toolbar=0" class="franchise-pdf-viewer"></iframe>
+                    <iframe src="바이젠_전략_컨설팅_기획서.pdf#toolbar=0" class="franchise-pdf-viewer"></iframe>
                 </div>
                 <div class="franchise-highlights">
                     <h4>4대 핵심 전략 영역</h4>
@@ -382,10 +382,8 @@
     </footer>
 
     <script src="script.js"></script>
-    <script src="https://chatbot-sdk.aitalker.co.kr/talker-sdk.umd.js"></script>
-    <script>
-        TalkerSDK.initializeTalkerSDK({ code: "biz008", position: "right" });
-    </script>
+
 <a href="https://jaiwshim-project.github.io/21-Tunnel-Business-Plan/" target="_blank" class="floating-btn-left">&#128206; 소시얼허브 터널</a>
-</body>
+<div class="aitalk-overlay" id="aitalkOverlay"><iframe src="https://aitalker.co.kr/biz008"></iframe></div>
+<button class="floating-btn-right" onclick="document.getElementById('aitalkOverlay').classList.toggle('active')">&#129302; AI톡</button></body>
 </html>
