--- a/about.html
+++ b/about.html
@@ -3,14 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>브랜드 소개 - 바이젠 수제맥주</title>
+    <title>브랜드 소개 - 케르비시아 브루잉</title>
+    display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <!-- 네비게이션 -->
     <nav class="navbar">
         <div class="container">
-            <div class="logo">WEIZEN</div>
+            <div class="logo"><img src="로고-케르비시아 브루잉.jpg" alt="Cervisia Brewing" class="logo-img"></div>
             <ul class="nav-menu">
                 <li><a href="index.html">홈</a></li>
                 <li><a href="about.html" class="active">브랜드 소개</a></li>
@@ -47,11 +49,11 @@
     <!-- 브랜드 소개 -->
     <section class="section about">
         <div class="container">
-            <h2 class="section-title">바이젠의 이야기</h2>
+            <h2 class="section-title">케르비시아 브루잉의 이야기</h2>
             <div class="about-grid">
                 <div class="about-card">
                     <div class="icon">🍺</div>
-                    <h3>바이젠 스토리</h3>
+                    <h3>케르비시아 브루잉 스토리</h3>
                     <p>독일 바이에른 지방의 전통 맥주 제조법을 기반으로, 한국인의 입맛에 맞춘 프리미엄 수제맥주를 선보입니다.</p>
                 </div>
                 <div class="about-card">
@@ -64,6 +66,17 @@
                     <h3>핵심 가치</h3>
                     <p>품질, 혁신, 지속가능성을 바탕으로 고객에게 특별한 경험을 제공합니다.</p>
                 </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- 회사 소개서 PDF 뷰어 -->
+    <section class="section">
+        <div class="container">
+            <h2 class="section-title">회사 소개서</h2>
+            <p class="section-subtitle" style="text-align:center; margin-bottom:1.5rem; color:#888;">케르비시아 브루어링 공식 회사 소개서를 확인하세요</p>
+            <div class="pdf-viewer-wrap">
+                <iframe src="회사소개서.pdf#toolbar=0&navpanes=0&scrollbar=0&statusbar=0&view=FitH" class="pdf-document-viewer"></iframe>
             </div>
         </div>
     </section>
@@ -116,7 +129,7 @@
                     <div class="timeline-year">2020</div>
                     <div class="timeline-info">
                         <h3>브랜드 론칭</h3>
-                        <p>바이젠 수제맥주 1호점 오픈 및 첫 제품 출시</p>
+                        <p>케르비시아 브루잉 1호점 오픈 및 첫 제품 출시</p>
                     </div>
                 </div>
                 <div class="timeline-item">
@@ -169,7 +182,7 @@
     <section class="section store-gallery-tabs">
         <div class="container">
             <h2 class="section-title">매장 & 공간 소개</h2>
-            <p class="section-subtitle">바이젠이 운영하는 매장과 브루어리를 둘러보세요</p>
+            <p class="section-subtitle">케르비시아 브루잉이 운영하는 매장과 브루어리를 둘러보세요</p>
 
             <!-- 탭 메뉴 -->
             <div class="gallery-tabs">
@@ -215,7 +228,7 @@
                         </div>
                         <div class="concept-info">
                             <h3>커뮤니티 테이블</h3>
-                            <p>대형 원목 테이블을 중심으로 자연스럽게 형성되는 커뮤니티. 정기적인 맥주 시음회와 문화 이벤트가 열리는 바이젠만의 특별한 경험을 제공합니다.</p>
+                            <p>대형 원목 테이블을 중심으로 자연스럽게 형성되는 커뮤니티. 정기적인 맥주 시음회와 문화 이벤트가 열리는 케르비시아 브루잉만의 특별한 경험을 제공합니다.</p>
                         </div>
                     </div>
                     <div class="concept-item">
@@ -224,7 +237,7 @@
                         </div>
                         <div class="concept-info">
                             <h3>장인정신의 디테일</h3>
-                            <p>공간 곳곳에 숨겨진 세심한 디테일. 맥주 제조 과정을 담은 빈티지 월페이퍼, 수작업으로 시공된 바닥 패턴까지. 모든 요소가 바이젠의 장인정신을 표현합니다.</p>
+                            <p>공간 곳곳에 숨겨진 세심한 디테일. 맥주 제조 과정을 담은 빈티지 월페이퍼, 수작업으로 시공된 바닥 패턴까지. 모든 요소가 케르비시아 브루잉의 장인정신을 표현합니다.</p>
                         </div>
                     </div>
                     <div class="concept-item reverse">
@@ -332,8 +345,8 @@
                             <div class="photo-overlay"><span>발효 탱크</span></div>
                         </div>
                         <div class="photo-gallery-item">
-                            <img src="KakaoTalk_20260130_092532286_08 (1).jpg" alt="바이젠 제품 배너">
-                            <div class="photo-overlay"><span>바이젠 제품 소개</span></div>
+                            <img src="KakaoTalk_20260130_092532286_08 (1).jpg" alt="케르비시아 제품 배너">
+                            <div class="photo-overlay"><span>케르비시아 제품 소개</span></div>
                         </div>
                         <div class="photo-gallery-item">
                             <img src="KakaoTalk_20260130_092532286_11 (1).jpg" alt="발효기 명판">
@@ -352,7 +365,7 @@
             <h2 class="section-title">제품 라인업</h2>
             <div class="products-grid">
                 <div class="product-card">
-                    <h3>바이젠 클래식</h3>
+                    <h3>케르비시아 클래식</h3>
                     <p class="product-type">Hefeweizen</p>
                     <p class="product-desc">바나나와 정향 향이 특징인 전통 독일식 밀맥주</p>
                     <div class="product-specs">
@@ -361,7 +374,7 @@
                     </div>
                 </div>
                 <div class="product-card">
-                    <h3>바이젠 페일 에일</h3>
+                    <h3>케르비시아 페일 에일</h3>
                     <p class="product-type">American Pale Ale</p>
                     <p class="product-desc">풍부한 홉 향과 깔끔한 마무리가 인상적인 페일 에일</p>
                     <div class="product-specs">
@@ -370,7 +383,7 @@
                     </div>
                 </div>
                 <div class="product-card">
-                    <h3>바이젠 IPA</h3>
+                    <h3>케르비시아 IPA</h3>
                     <p class="product-type">India Pale Ale</p>
                     <p class="product-desc">시트러스와 트로피컬 과일 향이 풍부한 IPA</p>
                     <div class="product-specs">
@@ -379,7 +392,7 @@
                     </div>
                 </div>
                 <div class="product-card">
-                    <h3>바이젠 스타우트</h3>
+                    <h3>케르비시아 스타우트</h3>
                     <p class="product-type">Oatmeal Stout</p>
                     <p class="product-desc">초콜릿과 커피 향이 특징인 부드러운 스타우트</p>
                     <div class="product-specs">
@@ -388,7 +401,7 @@
                     </div>
                 </div>
                 <div class="product-card">
-                    <h3>바이젠 라거</h3>
+                    <h3>케르비시아 라거</h3>
                     <p class="product-type">Premium Lager</p>
                     <p class="product-desc">깔끔하고 청량한 프리미엄 라거</p>
                     <div class="product-specs">
@@ -411,8 +424,8 @@
     <!-- CTA 섹션 -->
     <section class="section cta-section">
         <div class="container">
-            <h2>바이젠과 함께 성장하세요</h2>
-            <p>프리미엄 수제맥주 시장의 리더가 될 바이젠에 투자하세요</p>
+            <h2>케르비시아 브루잉과 함께 성장하세요</h2>
+            <p>프리미엄 수제맥주 시장의 리더가 될 케르비시아 브루잉에 투자하세요</p>
             <div class="cta-buttons">
                 <a href="investment.html" class="cta-button">투자 제안서 보기</a>
                 <a href="contact.html" class="cta-button secondary">문의하기</a>
@@ -421,12 +434,65 @@
     </section>
 
     <!-- 푸터 -->
-    <footer class="footer">
-        <div class="container">
-            <p>&copy; 2026 WEIZEN Craft Beer. All rights reserved.</p>
-            <div class="footer-links">
-                <a href="#">개인정보처리방침</a>
-                <a href="#">이용약관</a>
+        <footer class="footer">
+        <div class="footer-main">
+            <div class="container">
+                <div class="footer-grid">
+
+                    <!-- 브랜드 -->
+                    <div class="footer-brand">
+                        <img src="로고-케르비시아 브루잉.jpg" alt="Cervisia Brewing" class="footer-logo-img">
+                        <p class="footer-tagline">K-Beer 생태계를 선도하는<br>프리미엄 수제맥주 브랜드</p>
+                        <div class="footer-badge">BREWED WITH PASSION</div>
+                    </div>
+
+                    <!-- 메뉴 -->
+                    <div class="footer-col">
+                        <h4 class="footer-col-title">페이지</h4>
+                        <ul>
+                            <li><a href="index.html">홈</a></li>
+                            <li><a href="about.html">브랜드 소개</a></li>
+                            <li><a href="strategy.html">사업 전략</a></li>
+                            <li><a href="market.html">시장 분석</a></li>
+                            <li><a href="business.html">비즈니스 모델</a></li>
+                            <li><a href="investment.html">투자 제안</a></li>
+                            <li><a href="contact.html">문의하기</a></li>
+                        </ul>
+                    </div>
+
+                    <!-- 사업 전략 -->
+                    <div class="footer-col">
+                        <h4 class="footer-col-title">사업 전략</h4>
+                        <ul>
+                            <li><a href="strategy.html#franchise-detail">프랜차이즈 전략</a></li>
+                            <li><a href="strategy.html#ecosystem">K-Beer 생태계</a></li>
+                            <li><a href="strategy.html#benchmarking">스타벅스 벤치마킹</a></li>
+                            <li><a href="strategy.html#roadmap">실행 로드맵</a></li>
+                            <li><a href="investment.html">투자 제안서</a></li>
+                        </ul>
+                    </div>
+
+                    <!-- 문의 -->
+                    <div class="footer-col">
+                        <h4 class="footer-col-title">문의하기</h4>
+                        <ul class="footer-contact-list">
+                            <li><span class="fc-icon">📍</span>대전광역시 옥천군</li>
+                            <li><span class="fc-icon">💼</span>투자 &amp; 사업 제휴</li>
+                            <li><span class="fc-icon">🍺</span>프랜차이즈 가맹</li>
+                        </ul>
+                        <a href="contact.html" class="footer-cta-btn">문의하기 →</a>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+        <div class="footer-bottom">
+            <div class="container">
+                <p>© 2026 Cervisia Brewing. All rights reserved.</p>
+                <div class="footer-bottom-links">
+                    <a href="#">개인정보처리방침</a>
+                    <a href="#">이용약관</a>
+                </div>
             </div>
         </div>
     </footer>
