--- a/contact.html
+++ b/contact.html
@@ -3,14 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>문의하기 - 바이젠 수제맥주</title>
+    <title>문의하기 - 케르비시아 브루잉</title>
+    display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <!-- 네비게이션 -->
     <nav class="navbar">
         <div class="container">
-            <div class="logo">WEIZEN</div>
+            <div class="logo"><img src="로고-케르비시아 브루잉.jpg" alt="Cervisia Brewing" class="logo-img"></div>
             <ul class="nav-menu">
                 <li><a href="index.html">홈</a></li>
                 <li><a href="about.html">브랜드 소개</a></li>
@@ -49,13 +51,13 @@
         <div class="container">
             <div class="contact-content">
                 <div class="contact-info">
-                    <h3>바이젠 수제맥주</h3>
+                    <h3>케르비시아 브루잉</h3>
                     <p class="contact-intro">투자, 가맹, 제휴 등 모든 문의를 환영합니다. 성심성의껏 답변드리겠습니다.</p>
 
                     <div class="info-item">
                         <strong>주소:</strong>
                         <p>서울특별시 강남구 테헤란로 123</p>
-                        <p>바이젠 빌딩 5층</p>
+                        <p>케르비시아 브루잉 빌딩 5층</p>
                     </div>
                     <div class="info-item">
                         <strong>전화:</strong>
@@ -160,7 +162,7 @@
                 <div class="inquiry-card">
                     <div class="inquiry-icon">🏪</div>
                     <h3>가맹 문의</h3>
-                    <p>바이젠 프랜차이즈 개설에 관심 있는 예비 창업자를 환영합니다.</p>
+                    <p>케르비시아 브루잉 프랜차이즈 개설에 관심 있는 예비 창업자를 환영합니다.</p>
                     <ul>
                         <li>가맹 조건 안내</li>
                         <li>초기 투자 비용</li>
@@ -284,12 +286,65 @@
     </section>
 
     <!-- 푸터 -->
-    <footer class="footer">
-        <div class="container">
-            <p>&copy; 2026 WEIZEN Craft Beer. All rights reserved.</p>
-            <div class="footer-links">
-                <a href="#">개인정보처리방침</a>
-                <a href="#">이용약관</a>
+        <footer class="footer">
+        <div class="footer-main">
+            <div class="container">
+                <div class="footer-grid">
+
+                    <!-- 브랜드 -->
+                    <div class="footer-brand">
+                        <img src="로고-케르비시아 브루잉.jpg" alt="Cervisia Brewing" class="footer-logo-img">
+                        <p class="footer-tagline">K-Beer 생태계를 선도하는<br>프리미엄 수제맥주 브랜드</p>
+                        <div class="footer-badge">BREWED WITH PASSION</div>
+                    </div>
+
+                    <!-- 메뉴 -->
+                    <div class="footer-col">
+                        <h4 class="footer-col-title">페이지</h4>
+                        <ul>
+                            <li><a href="index.html">홈</a></li>
+                            <li><a href="about.html">브랜드 소개</a></li>
+                            <li><a href="strategy.html">사업 전략</a></li>
+                            <li><a href="market.html">시장 분석</a></li>
+                            <li><a href="business.html">비즈니스 모델</a></li>
+                            <li><a href="investment.html">투자 제안</a></li>
+                            <li><a href="contact.html">문의하기</a></li>
+                        </ul>
+                    </div>
+
+                    <!-- 사업 전략 -->
+                    <div class="footer-col">
+                        <h4 class="footer-col-title">사업 전략</h4>
+                        <ul>
+                            <li><a href="strategy.html#franchise-detail">프랜차이즈 전략</a></li>
+                            <li><a href="strategy.html#ecosystem">K-Beer 생태계</a></li>
+                            <li><a href="strategy.html#benchmarking">스타벅스 벤치마킹</a></li>
+                            <li><a href="strategy.html#roadmap">실행 로드맵</a></li>
+                            <li><a href="investment.html">투자 제안서</a></li>
+                        </ul>
+                    </div>
+
+                    <!-- 문의 -->
+                    <div class="footer-col">
+                        <h4 class="footer-col-title">문의하기</h4>
+                        <ul class="footer-contact-list">
+                            <li><span class="fc-icon">📍</span>대전광역시 옥천군</li>
+                            <li><span class="fc-icon">💼</span>투자 &amp; 사업 제휴</li>
+                            <li><span class="fc-icon">🍺</span>프랜차이즈 가맹</li>
+                        </ul>
+                        <a href="contact.html" class="footer-cta-btn">문의하기 →</a>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+        <div class="footer-bottom">
+            <div class="container">
+                <p>© 2026 Cervisia Brewing. All rights reserved.</p>
+                <div class="footer-bottom-links">
+                    <a href="#">개인정보처리방침</a>
+                    <a href="#">이용약관</a>
+                </div>
             </div>
         </div>
     </footer>
