--- a/market.html
+++ b/market.html
@@ -3,14 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>시장 분석 - 바이젠 수제맥주</title>
+    <title>시장 분석 - 케르비시아 브루잉</title>
+    display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <!-- 네비게이션 -->
     <nav class="navbar">
         <div class="container">
-            <div class="logo">WEIZEN</div>
+            <div class="logo"><img src="로고-케르비시아 브루잉.jpg" alt="Cervisia Brewing" class="logo-img"></div>
             <ul class="nav-menu">
                 <li><a href="index.html">홈</a></li>
                 <li><a href="about.html">브랜드 소개</a></li>
@@ -70,7 +72,7 @@
                         </div>
                     </div>
                     <div class="advantage">
-                        <strong>바이젠의 경쟁우위</strong>
+                        <strong>케르비시아 브루잉의 경쟁우위</strong>
                         <p>품질 + 규모 + 접근성의 균형</p>
                     </div>
                 </div>
@@ -248,7 +250,7 @@
                     <h3>시장 포지셔닝</h3>
                     <div class="matrix-chart">
                         <div class="matrix-info">
-                            <p><strong>바이젠</strong>은 높은 품질과 적절한 가격으로 대형 브랜드와 소형 양조장 사이의 빈틈을 공략합니다.</p>
+                            <p><strong>케르비시아 브루잉</strong>은 높은 품질과 적절한 가격으로 대형 브랜드와 소형 양조장 사이의 빈틈을 공략합니다.</p>
                         </div>
                         <div class="position-grid">
                             <div class="position-item high-quality high-price">
@@ -256,7 +258,7 @@
                                 <p>높은 품질, 높은 가격</p>
                             </div>
                             <div class="position-item high-quality mid-price highlight">
-                                <strong>바이젠</strong>
+                                <strong>케르비시아 브루잉</strong>
                                 <p>높은 품질, 합리적 가격</p>
                             </div>
                             <div class="position-item mid-quality low-price">
@@ -340,7 +342,7 @@
     <section class="section cta-section">
         <div class="container">
             <h2>성장하는 시장의 선두주자</h2>
-            <p>명확한 시장 기회를 포착한 바이젠에 투자하세요</p>
+            <p>명확한 시장 기회를 포착한 케르비시아 브루잉에 투자하세요</p>
             <div class="cta-buttons">
                 <a href="investment.html" class="cta-button">투자 제안서 보기</a>
                 <a href="contact.html" class="cta-button secondary">문의하기</a>
@@ -349,12 +351,65 @@
     </section>
 
     <!-- 푸터 -->
-    <footer class="footer">
-        <div class="container">
-            <p>&copy; 2026 WEIZEN Craft Beer. All rights reserved.</p>
-            <div class="footer-links">
-                <a href="#">개인정보처리방침</a>
-                <a href="#">이용약관</a>
+        <footer class="footer">
+        <div class="footer-main">
+            <div class="container">
+                <div class="footer-grid">
+
+                    <!-- 브랜드 -->
+                    <div class="footer-brand">
+                        <img src="로고-케르비시아 브루잉.jpg" alt="Cervisia Brewing" class="footer-logo-img">
+                        <p class="footer-tagline">K-Beer 생태계를 선도하는<br>프리미엄 수제맥주 브랜드</p>
+                        <div class="footer-badge">BREWED WITH PASSION</div>
+                    </div>
+
+                    <!-- 메뉴 -->
+                    <div class="footer-col">
+                        <h4 class="footer-col-title">페이지</h4>
+                        <ul>
+                            <li><a href="index.html">홈</a></li>
+                            <li><a href="about.html">브랜드 소개</a></li>
+                            <li><a href="strategy.html">사업 전략</a></li>
+                            <li><a href="market.html">시장 분석</a></li>
+                            <li><a href="business.html">비즈니스 모델</a></li>
+                            <li><a href="investment.html">투자 제안</a></li>
+                            <li><a href="contact.html">문의하기</a></li>
+                        </ul>
+                    </div>
+
+                    <!-- 사업 전략 -->
+                    <div class="footer-col">
+                        <h4 class="footer-col-title">사업 전략</h4>
+                        <ul>
+                            <li><a href="strategy.html#franchise-detail">프랜차이즈 전략</a></li>
+                            <li><a href="strategy.html#ecosystem">K-Beer 생태계</a></li>
+                            <li><a href="strategy.html#benchmarking">스타벅스 벤치마킹</a></li>
+                            <li><a href="strategy.html#roadmap">실행 로드맵</a></li>
+                            <li><a href="investment.html">투자 제안서</a></li>
+                        </ul>
+                    </div>
+
+                    <!-- 문의 -->
+                    <div class="footer-col">
+                        <h4 class="footer-col-title">문의하기</h4>
+                        <ul class="footer-contact-list">
+                            <li><span class="fc-icon">📍</span>대전광역시 옥천군</li>
+                            <li><span class="fc-icon">💼</span>투자 &amp; 사업 제휴</li>
+                            <li><span class="fc-icon">🍺</span>프랜차이즈 가맹</li>
+                        </ul>
+                        <a href="contact.html" class="footer-cta-btn">문의하기 →</a>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+        <div class="footer-bottom">
+            <div class="container">
+                <p>© 2026 Cervisia Brewing. All rights reserved.</p>
+                <div class="footer-bottom-links">
+                    <a href="#">개인정보처리방침</a>
+                    <a href="#">이용약관</a>
+                </div>
             </div>
         </div>
     </footer>
